--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 	<div class="col-sm-6">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h2 class="panel-title"><i class="fa">Burgers Ready to Eat</i></h2>
+				<h2 class="panel-title"><i class="fa">Bob's Burgers Ready to Eat</i></h2>
 			</div>
 			<div class="panel-body panel-margin">
 				{{#each ready}}
@@ -27,7 +27,7 @@
 	<div class="col-sm-6">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h2 class="panel-title"><i class="fa">Burgers Already Eaten</i></h2>
+				<h2 class="panel-title"><i class="fa">Bob's Burgers Already Eaten</i></h2>
 			</div>
 			<div class="panel-body panel-margin">
 				{{#each eaten}}
@@ -55,7 +55,7 @@
 	<div class="col-sm-4">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h2 class="panel-title"><i class="fa">Add New Burger</i></h2>
+				<h2 class="panel-title"><i class="fa">Add New Burger to Bob's Menu</i></h2>
 			</div>
 			<div class="panel-body panel-margin">
 				<div class="row">
