--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,12 @@
 
 		<!-- Font Awesome Glyphicons -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-		<link rel="stylesheet" href="burger_style.css">
+		<link rel="stylesheet" href="assets/css/burger_style.css">
 	</head>
 	<body>
 		<div class="container">
 		    <div class="row">
-				<img class="center-block" src="burger.jpg" alt="Bob's Big Burger">
+				<img class="center-block" src="assets/img/burger.jpg" alt="Bob's Big Burger">
 			</div>
 		    <div class="row">
 				{{{ body }}}
